<resources>
    <string name="app_name">quiz</string>
    <string name="question">Do dogs bark?</string>
    <string name="true_Button">True</string>
    <string name="false_Button">False</string>
    <string name="correct_toast">Right Answer</string>
    <string name="incorrect_toast">Wrong Answer</string>
    <string name="next">Next</string>
    <string name="ques1">Goldfish only have a memory of three seconds</string>
    <string name="ques2">An octopus has five hearts</string>
    <string name="ques3">Brazil is the only country in the Americas to have the official language of Portuguese</string>
    <string name="front_text">MY QUIZ</string>
    <string name="Start_but">Start The Quiz</string>
    <string name="Bookmarks_but">Bookmarked Questions</string>
    <string name="title_activity_simple_quiz">simple_quiz</string>
</resources>
