<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_Quiz"
        android:layout_width="224dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autoText="false"
        android:background="@drawable/rounded_corners"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Start_but"
        android:textColor="#2F988E"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bookmarks"
        android:layout_width="221dp"
        android:layout_height="64dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Bookmarks_but"
        android:textColor="#2F988E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_Quiz"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/front_text"
        android:textAllCaps="false"
        android:textColor="#15756C"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_Quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

</androidx.constraintlayout.widget.ConstraintLayout>