<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="20dp"
        android:text="text"
        android:textColor="#191616"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <Button
        android:id="@+id/next"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="190dp"
        android:layout_height="67dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#FFFFFB"
        android:clickable="true"
        android:fadingEdge="horizontal|vertical"
        android:paddingLeft="10dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/true_Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#FDFDFD"
        android:paddingLeft="10dp"
        android:text="@string/true_Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/false_Button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/false_Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#F8F5F5"
        android:paddingRight="10dp"
        android:text="@string/false_Button"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/true_Button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="351dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
